--- a/am982-stdv1-firmware.ioc
+++ b/am982-stdv1-firmware.ioc
@@ -286,9 +286,10 @@ PF1.GPIOParameters=GPIO_Label
 PF1.GPIO_Label=IMU_SCL
 PF1.Mode=I2C
 PF1.Signal=I2C5_SCL
-PG10.GPIOParameters=GPIO_Label
+PG10.GPIOParameters=PinState,GPIO_Label
 PG10.GPIO_Label=IMU_RST
 PG10.Locked=true
+PG10.PinState=GPIO_PIN_SET
 PG10.Signal=GPIO_Output
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=LORA_TX
@@ -355,7 +356,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_I2C5_Init-I2C5-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_UART5_Init-UART5-false-HAL-true,9-MX_UART7_Init-UART7-false-HAL-true,10-MX_UART9_Init-UART9-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_USART6_UART_Init-USART6-false-HAL-true,13-MX_USART10_UART_Init-USART10-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_I2C5_Init-I2C5-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_UART5_Init-UART5-false-HAL-true,9-MX_UART7_Init-UART7-false-HAL-true,10-MX_UART9_Init-UART9-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_USART6_UART_Init-USART6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=250000000
 RCC.AHB12Freq_Value=250000000
 RCC.AHB4Freq_Value=250000000
