--- a/am982-stdv1-firmware.ioc
+++ b/am982-stdv1-firmware.ioc
@@ -4,6 +4,45 @@ CAD.pinconfig=Dual
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
+Dma.Request0=UART9_TX
+Dma.Request1=UART9_RX
+Dma.RequestsNb=2
+Dma.UART9_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART9_RX.1.EventEnable=DISABLE
+Dma.UART9_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART9_RX.1.Instance=DMA1_Stream1
+Dma.UART9_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART9_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.UART9_RX.1.Mode=DMA_NORMAL
+Dma.UART9_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART9_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.UART9_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART9_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.UART9_RX.1.RequestNumber=1
+Dma.UART9_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART9_RX.1.SignalID=NONE
+Dma.UART9_RX.1.SyncEnable=DISABLE
+Dma.UART9_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART9_RX.1.SyncRequestNumber=1
+Dma.UART9_RX.1.SyncSignalID=NONE
+Dma.UART9_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART9_TX.0.EventEnable=DISABLE
+Dma.UART9_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART9_TX.0.Instance=DMA1_Stream0
+Dma.UART9_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART9_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART9_TX.0.Mode=DMA_NORMAL
+Dma.UART9_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART9_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART9_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART9_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.UART9_TX.0.RequestNumber=1
+Dma.UART9_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART9_TX.0.SignalID=NONE
+Dma.UART9_TX.0.SyncEnable=DISABLE
+Dma.UART9_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART9_TX.0.SyncRequestNumber=1
+Dma.UART9_TX.0.SyncSignalID=NONE
 FDCAN2.CalculateBaudRateNominal=2604166
 FDCAN2.CalculateTimeBitNominal=384
 FDCAN2.CalculateTimeQuantumNominal=128.0
@@ -74,24 +113,25 @@ Mcu.CPN=STM32H723ZGT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP10=SYS
-Mcu.IP11=UART4
-Mcu.IP12=UART5
-Mcu.IP13=UART7
-Mcu.IP14=UART9
-Mcu.IP15=USART2
-Mcu.IP16=USART6
-Mcu.IP17=USB_DEVICE
-Mcu.IP18=USB_OTG_HS
-Mcu.IP2=FDCAN2
-Mcu.IP3=FREERTOS
-Mcu.IP4=I2C5
-Mcu.IP5=MEMORYMAP
-Mcu.IP6=NVIC
-Mcu.IP7=PWR
-Mcu.IP8=RCC
-Mcu.IP9=RTC
-Mcu.IPNb=19
+Mcu.IP10=RTC
+Mcu.IP11=SYS
+Mcu.IP12=UART4
+Mcu.IP13=UART5
+Mcu.IP14=UART7
+Mcu.IP15=UART9
+Mcu.IP16=USART2
+Mcu.IP17=USART6
+Mcu.IP18=USB_DEVICE
+Mcu.IP19=USB_OTG_HS
+Mcu.IP2=DMA
+Mcu.IP3=FDCAN2
+Mcu.IP4=FREERTOS
+Mcu.IP5=I2C5
+Mcu.IP6=MEMORYMAP
+Mcu.IP7=NVIC
+Mcu.IP8=PWR
+Mcu.IP9=RCC
+Mcu.IPNb=20
 Mcu.Name=STM32H723ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14-OSC32_IN
@@ -141,6 +181,8 @@ Mcu.UserName=STM32H723ZGTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -346,7 +388,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_I2C5_Init-I2C5-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_UART5_Init-UART5-false-HAL-true,9-MX_UART7_Init-UART7-false-HAL-true,10-MX_UART9_Init-UART9-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_USART6_UART_Init-USART6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_FDCAN2_Init-FDCAN2-false-HAL-true,7-MX_I2C5_Init-I2C5-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,9-MX_UART5_Init-UART5-false-HAL-true,10-MX_UART7_Init-UART7-false-HAL-true,11-MX_UART9_Init-UART9-false-HAL-true,12-MX_USART2_UART_Init-USART2-false-HAL-true,14-MX_USART6_UART_Init-USART6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=250000000
 RCC.AHB12Freq_Value=250000000
 RCC.AHB4Freq_Value=250000000
@@ -477,3 +519,4 @@ VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_HS
 board=custom
 rtos.0.ip=FREERTOS
+isbadioc=false
