--- a/am982-stdv1-firmware.ioc
+++ b/am982-stdv1-firmware.ioc
@@ -6,7 +6,45 @@ CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 Dma.Request0=UART9_TX
 Dma.Request1=UART9_RX
-Dma.RequestsNb=2
+Dma.Request2=UART4_TX
+Dma.Request3=UART4_RX
+Dma.RequestsNb=4
+Dma.UART4_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART4_RX.3.EventEnable=DISABLE
+Dma.UART4_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_RX.3.Instance=DMA1_Stream3
+Dma.UART4_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.UART4_RX.3.Mode=DMA_NORMAL
+Dma.UART4_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART4_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.UART4_RX.3.RequestNumber=1
+Dma.UART4_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART4_RX.3.SignalID=NONE
+Dma.UART4_RX.3.SyncEnable=DISABLE
+Dma.UART4_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART4_RX.3.SyncRequestNumber=1
+Dma.UART4_RX.3.SyncSignalID=NONE
+Dma.UART4_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART4_TX.2.EventEnable=DISABLE
+Dma.UART4_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_TX.2.Instance=DMA1_Stream2
+Dma.UART4_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.UART4_TX.2.Mode=DMA_NORMAL
+Dma.UART4_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_TX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART4_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.UART4_TX.2.RequestNumber=1
+Dma.UART4_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART4_TX.2.SignalID=NONE
+Dma.UART4_TX.2.SyncEnable=DISABLE
+Dma.UART4_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART4_TX.2.SyncRequestNumber=1
+Dma.UART4_TX.2.SyncSignalID=NONE
 Dma.UART9_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.UART9_RX.1.EventEnable=DISABLE
 Dma.UART9_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -51,7 +89,7 @@ FREERTOS.FootprintOK=false
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configMINIMAL_STACK_SIZE,FootprintOK
 FREERTOS.Tasks01=Main,24,512,StartMain,As weak,NULL,Dynamic,NULL,NULL;RTKCOM1,24,512,StartRTKCOM1,As weak,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=512
-FREERTOS.configTOTAL_HEAP_SIZE=4096
+FREERTOS.configTOTAL_HEAP_SIZE=5120
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C5.IPParameters=Timing
@@ -183,6 +221,8 @@ MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
