--- a/am982-stdv1-firmware.ioc
+++ b/am982-stdv1-firmware.ioc
@@ -4,83 +4,83 @@ CAD.pinconfig=Dual
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
-Dma.Request0=UART9_TX
-Dma.Request1=UART9_RX
-Dma.Request2=UART4_TX
-Dma.Request3=UART4_RX
+Dma.Request0=UART4_TX
+Dma.Request1=UART4_RX
+Dma.Request2=UART9_TX
+Dma.Request3=UART9_RX
 Dma.RequestsNb=4
-Dma.UART4_RX.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.UART4_RX.3.EventEnable=DISABLE
-Dma.UART4_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART4_RX.3.Instance=DMA1_Stream3
-Dma.UART4_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART4_RX.3.MemInc=DMA_MINC_ENABLE
-Dma.UART4_RX.3.Mode=DMA_NORMAL
-Dma.UART4_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART4_RX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.UART4_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.UART4_RX.3.Priority=DMA_PRIORITY_LOW
-Dma.UART4_RX.3.RequestNumber=1
-Dma.UART4_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.UART4_RX.3.SignalID=NONE
-Dma.UART4_RX.3.SyncEnable=DISABLE
-Dma.UART4_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.UART4_RX.3.SyncRequestNumber=1
-Dma.UART4_RX.3.SyncSignalID=NONE
-Dma.UART4_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.UART4_TX.2.EventEnable=DISABLE
-Dma.UART4_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART4_TX.2.Instance=DMA1_Stream2
-Dma.UART4_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART4_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.UART4_TX.2.Mode=DMA_NORMAL
-Dma.UART4_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART4_TX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.UART4_TX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.UART4_TX.2.Priority=DMA_PRIORITY_LOW
-Dma.UART4_TX.2.RequestNumber=1
-Dma.UART4_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.UART4_TX.2.SignalID=NONE
-Dma.UART4_TX.2.SyncEnable=DISABLE
-Dma.UART4_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.UART4_TX.2.SyncRequestNumber=1
-Dma.UART4_TX.2.SyncSignalID=NONE
-Dma.UART9_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.UART9_RX.1.EventEnable=DISABLE
-Dma.UART9_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART9_RX.1.Instance=DMA1_Stream1
-Dma.UART9_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART9_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.UART9_RX.1.Mode=DMA_NORMAL
-Dma.UART9_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART9_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.UART9_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.UART9_RX.1.Priority=DMA_PRIORITY_LOW
-Dma.UART9_RX.1.RequestNumber=1
-Dma.UART9_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.UART9_RX.1.SignalID=NONE
-Dma.UART9_RX.1.SyncEnable=DISABLE
-Dma.UART9_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.UART9_RX.1.SyncRequestNumber=1
-Dma.UART9_RX.1.SyncSignalID=NONE
-Dma.UART9_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.UART9_TX.0.EventEnable=DISABLE
-Dma.UART9_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART9_TX.0.Instance=DMA1_Stream0
-Dma.UART9_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART9_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.UART9_TX.0.Mode=DMA_NORMAL
-Dma.UART9_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART9_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.UART9_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.UART9_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.UART9_TX.0.RequestNumber=1
-Dma.UART9_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.UART9_TX.0.SignalID=NONE
-Dma.UART9_TX.0.SyncEnable=DISABLE
-Dma.UART9_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.UART9_TX.0.SyncRequestNumber=1
-Dma.UART9_TX.0.SyncSignalID=NONE
+Dma.UART4_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART4_RX.1.EventEnable=DISABLE
+Dma.UART4_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_RX.1.Instance=DMA1_Stream3
+Dma.UART4_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.UART4_RX.1.Mode=DMA_NORMAL
+Dma.UART4_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART4_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.UART4_RX.1.RequestNumber=1
+Dma.UART4_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART4_RX.1.SignalID=NONE
+Dma.UART4_RX.1.SyncEnable=DISABLE
+Dma.UART4_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART4_RX.1.SyncRequestNumber=1
+Dma.UART4_RX.1.SyncSignalID=NONE
+Dma.UART4_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART4_TX.0.EventEnable=DISABLE
+Dma.UART4_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_TX.0.Instance=DMA1_Stream2
+Dma.UART4_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART4_TX.0.Mode=DMA_NORMAL
+Dma.UART4_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART4_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.UART4_TX.0.RequestNumber=1
+Dma.UART4_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART4_TX.0.SignalID=NONE
+Dma.UART4_TX.0.SyncEnable=DISABLE
+Dma.UART4_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART4_TX.0.SyncRequestNumber=1
+Dma.UART4_TX.0.SyncSignalID=NONE
+Dma.UART9_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART9_RX.3.EventEnable=DISABLE
+Dma.UART9_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART9_RX.3.Instance=DMA1_Stream1
+Dma.UART9_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART9_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.UART9_RX.3.Mode=DMA_NORMAL
+Dma.UART9_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART9_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.UART9_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART9_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.UART9_RX.3.RequestNumber=1
+Dma.UART9_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART9_RX.3.SignalID=NONE
+Dma.UART9_RX.3.SyncEnable=DISABLE
+Dma.UART9_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART9_RX.3.SyncRequestNumber=1
+Dma.UART9_RX.3.SyncSignalID=NONE
+Dma.UART9_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART9_TX.2.EventEnable=DISABLE
+Dma.UART9_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART9_TX.2.Instance=DMA1_Stream0
+Dma.UART9_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART9_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.UART9_TX.2.Mode=DMA_NORMAL
+Dma.UART9_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART9_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.UART9_TX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART9_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.UART9_TX.2.RequestNumber=1
+Dma.UART9_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART9_TX.2.SignalID=NONE
+Dma.UART9_TX.2.SyncEnable=DISABLE
+Dma.UART9_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART9_TX.2.SyncRequestNumber=1
+Dma.UART9_TX.2.SyncSignalID=NONE
 FDCAN2.CalculateBaudRateNominal=2604166
 FDCAN2.CalculateTimeBitNominal=384
 FDCAN2.CalculateTimeQuantumNominal=128.0
@@ -239,11 +239,11 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
-NVIC.UART4_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.UART4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UART5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UART7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.UART9_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.UART9_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA11.GPIOParameters=GPIO_Label
@@ -407,7 +407,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H723ZGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.12.0
+ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.12.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x2000
@@ -525,19 +525,9 @@ RTC.Month=RTC_MONTH_AUGUST
 RTC.StoreOperation=RTC_STOREOPERATION_RESET
 RTC.WeekDay=RTC_WEEKDAY_FRIDAY
 RTC.Year=24
-UART4.FIFOMode=FIFOMODE_DISABLE
-UART4.IPParameters=FIFOMode
-UART5.FIFOMode=FIFOMODE_DISABLE
-UART5.IPParameters=FIFOMode
-UART7.FIFOMode=FIFOMODE_DISABLE
-UART7.IPParameters=FIFOMode
-UART9.FIFOMode=FIFOMODE_DISABLE
-UART9.IPParameters=FIFOMode
-USART2.FIFOMode=FIFOMODE_DISABLE
-USART2.IPParameters=VirtualMode-Asynchronous,FIFOMode
+USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-USART6.FIFOMode=FIFOMODE_DISABLE
-USART6.IPParameters=VirtualMode-Asynchronous,FIFOMode
+USART6.IPParameters=VirtualMode-Asynchronous
 USART6.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_HS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeHS,CLASS_NAME_HS
