--- a/am982-stdv1-firmware.ioc
+++ b/am982-stdv1-firmware.ioc
@@ -8,7 +8,9 @@ Dma.Request0=UART4_TX
 Dma.Request1=UART4_RX
 Dma.Request2=UART9_TX
 Dma.Request3=UART9_RX
-Dma.RequestsNb=4
+Dma.Request4=USART2_TX
+Dma.Request5=USART2_RX
+Dma.RequestsNb=6
 Dma.UART4_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.UART4_RX.1.EventEnable=DISABLE
 Dma.UART4_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -81,6 +83,42 @@ Dma.UART9_TX.2.SyncEnable=DISABLE
 Dma.UART9_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.UART9_TX.2.SyncRequestNumber=1
 Dma.UART9_TX.2.SyncSignalID=NONE
+Dma.USART2_RX.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.5.EventEnable=DISABLE
+Dma.USART2_RX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_RX.5.Instance=DMA1_Stream5
+Dma.USART2_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.5.Mode=DMA_NORMAL
+Dma.USART2_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.5.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART2_RX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.5.RequestNumber=1
+Dma.USART2_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART2_RX.5.SignalID=NONE
+Dma.USART2_RX.5.SyncEnable=DISABLE
+Dma.USART2_RX.5.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART2_RX.5.SyncRequestNumber=1
+Dma.USART2_RX.5.SyncSignalID=NONE
+Dma.USART2_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.4.EventEnable=DISABLE
+Dma.USART2_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.4.Instance=DMA1_Stream4
+Dma.USART2_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.4.Mode=DMA_NORMAL
+Dma.USART2_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART2_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.4.RequestNumber=1
+Dma.USART2_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART2_TX.4.SignalID=NONE
+Dma.USART2_TX.4.SyncEnable=DISABLE
+Dma.USART2_TX.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART2_TX.4.SyncRequestNumber=1
+Dma.USART2_TX.4.SyncSignalID=NONE
 FDCAN2.CalculateBaudRateNominal=2604166
 FDCAN2.CalculateTimeBitNominal=384
 FDCAN2.CalculateTimeQuantumNominal=128.0
@@ -223,6 +261,8 @@ NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -549,3 +589,4 @@ VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_HS
 board=custom
 rtos.0.ip=FREERTOS
+isbadioc=false
