newlib and printf float support

--- a/am982-stdv1-firmware.ioc
+++ b/am982-stdv1-firmware.ioc
@@ -124,10 +124,11 @@ FDCAN2.CalculateTimeBitNominal=384
 FDCAN2.CalculateTimeQuantumNominal=128.0
 FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 FREERTOS.FootprintOK=false
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configMINIMAL_STACK_SIZE,FootprintOK
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configMINIMAL_STACK_SIZE,FootprintOK,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=Main,24,512,StartMain,As weak,NULL,Dynamic,NULL,NULL;RTKCOM1,24,512,StartRTKCOM1,As weak,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=512
 FREERTOS.configTOTAL_HEAP_SIZE=5120
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C5.IPParameters=Timing
