--- a/am982-stdv1-firmware.ioc
+++ b/am982-stdv1-firmware.ioc
@@ -123,11 +123,11 @@ FDCAN2.CalculateBaudRateNominal=2604166
 FDCAN2.CalculateTimeBitNominal=384
 FDCAN2.CalculateTimeQuantumNominal=128.0
 FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
-FREERTOS.FootprintOK=false
+FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configMINIMAL_STACK_SIZE,FootprintOK,configUSE_NEWLIB_REENTRANT
-FREERTOS.Tasks01=Main,24,512,StartMain,As weak,NULL,Dynamic,NULL,NULL;RTKCOM1,24,512,StartRTKCOM1,As weak,NULL,Dynamic,NULL,NULL
-FREERTOS.configMINIMAL_STACK_SIZE=512
-FREERTOS.configTOTAL_HEAP_SIZE=5120
+FREERTOS.Tasks01=Main,24,2048,StartMain,As weak,NULL,Dynamic,NULL,NULL;RTKCOM1,24,2048,StartRTKCOM1,As weak,NULL,Dynamic,NULL,NULL;RTKCOM3,24,2048,StartRTKCOM3,As weak,NULL,Dynamic,NULL,NULL;IMU,24,2048,StartIMU,As weak,NULL,Dynamic,NULL,NULL
+FREERTOS.configMINIMAL_STACK_SIZE=2048
+FREERTOS.configTOTAL_HEAP_SIZE=65536
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -451,7 +451,7 @@ ProjectManager.DeviceId=STM32H723ZGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.12.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x2000
+ProjectManager.HeapSize=0x10000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
