--- a/am982-stdv1-firmware.ioc
+++ b/am982-stdv1-firmware.ioc
@@ -566,9 +566,19 @@ RTC.Month=RTC_MONTH_AUGUST
 RTC.StoreOperation=RTC_STOREOPERATION_RESET
 RTC.WeekDay=RTC_WEEKDAY_FRIDAY
 RTC.Year=24
-USART2.IPParameters=VirtualMode-Asynchronous
+UART4.IPParameters=OverrunDisableParam
+UART4.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
+UART5.IPParameters=OverrunDisableParam
+UART5.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
+UART7.IPParameters=OverrunDisableParam
+UART7.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
+UART9.IPParameters=OverrunDisableParam
+UART9.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
+USART2.IPParameters=VirtualMode-Asynchronous,OverrunDisableParam
+USART2.OverrunDisableParam=ADVFEATURE_OVERRUN_DISABLE
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-USART6.IPParameters=VirtualMode-Asynchronous
+USART6.IPParameters=VirtualMode-Asynchronous,OverrunDisableParam
+USART6.OverrunDisableParam=ADVFEATURE_OVERRUN_DISABLE
 USART6.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_HS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeHS,CLASS_NAME_HS
